tg-7009. [FE] Sacar llamado a método desde html para evitar re-renderizar card de datos antropométricos cuando no hay cambios

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/antropometricos-summary/antropometricos-summary.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/antropometricos-summary/antropometricos-summary.component.html
@@ -4,7 +4,7 @@
 	(openInNew)="openDialog()">
 	<mat-card-content *ngIf="details.length > 0 else noInfo" fxLayout="row wrap" fxLayoutAlign="center"
 		fxLayoutGap="10px grid">
-		<app-detail-box *ngFor="let detail of details" [id]="getIdentificator(detail)" [detail]="detail">
+		<app-detail-box *ngFor="let detail of details" [id]="detail.id" [detail]="detail">
 		</app-detail-box>
 	</mat-card-content>
 	<ng-template #noInfo>
