--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
@@ -149,7 +149,7 @@
 					[header]="internacionSummary">
 					<mat-card-content>
 						<app-internment-episode-summary [canLoadProbableDischargeDate]="canLoadProbableDischargeDate"
-							[hasEpicrisis]="epicrisisDoc" [internmentEpisode]="internmentEpisodeSummary"
+							[patientDocuments]="internmentDocuments" [internmentEpisode]="internmentEpisodeSummary"
 							[patientId]="patientId" [showDischarge]="showDischarge">
 						</app-internment-episode-summary>
 					</mat-card-content>
