--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -46,12 +46,12 @@
 						*appHasRole="['ADMINISTRATIVO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO', 'ESPECIALISTA_EN_ODONTOLOGIA']">
 						<app-summary-card id="internment_summary_card" [header]="internacionSummary"
 							[canEdit]="['ESPECIALISTA_MEDICO']"
-							[editable]="!hasMedicalDischarge && canLoadProbableDischargeDate"
+							[editable]="!patientDischarge.medicalDischarge && !patientDischarge.physicalDischarge && canLoadProbableDischargeDate"
 							(openInNew)="openDialog()">
 							<mat-card-content>
 								<app-internment-episode-summary [internmentEpisode]="internmentEpisodeSummary"
 									[canLoadProbableDischargeDate]="canLoadProbableDischargeDate"
-									[patientId]="patientId" [hasEpicrisis]="epicrisisDoc?.confirmed"
+									[patientId]="patientId" [patientDocuments]="{hasAnamnesis: !!anamnesisDoc?.confirmed, hasEpicrisis: !!epicrisisDoc?.confirmed}"
 									[showDischarge]="showDischarge">
 								</app-internment-episode-summary>
 							</mat-card-content>
