--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/routes/patient-discharge/patient-discharge.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/routes/patient-discharge/patient-discharge.component.html
@@ -9,7 +9,7 @@
 					<div class="form-row" fxLayoutGap="5px">
 						<mat-form-field class="date" appearance="outline">
 							<input formControlName="date" id="date" matInput [matDatepicker]="datePicker"
-								[value]="today" [max]="today" [min]="minDischargeDate"
+								[value]="todayDate" [max]="todayDate" [min]="minDischargeDate"
 								placeholder="{{'internaciones.discharge.DISCHARGE_DATE' | translate}}">
 
 							<mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
