--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/create-internment-order/create-internment-order.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/create-internment-order/create-internment-order.component.scss
@@ -2,8 +2,15 @@
 	width: 100%;
 }
 
-.template-detail {
+.detail-text {
 	color: gray;
 	font-size: 13px;
 	font-weight: lighter;
+}
+
+
+.template-name {
+	color: gray;
+	font-size: 13px;
+	padding-bottom: 1em;
 }
