tg-6666-internacion [FE] [Internacion] Mostrar el nombre autopercibido si está activo el FF

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.html
@@ -100,7 +100,7 @@
 								</span>
 							</div>
 							<div fxLayout="column" fxLayoutGap="10px">
-								<span mat-line>{{documentSearch.document.creator.firstName}} {{documentSearch.document.creator.lastName}}</span>
+								<span mat-line>{{getFullName(documentSearch.document.creator.firstName, documentSearch.document.creator.nameSelfDetermination)}} {{documentSearch.document.creator.lastName}}</span>
 								<span mat-line>{{documentSearch.createdOn}}</span>
 							</div>
 							<mat-divider></mat-divider>
