--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/historia-clinica-mixins.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/historia-clinica-mixins.scss
@@ -1,13 +1,13 @@
 @import "./modules/ambulatoria/ambulatoria-mixins.scss";
 @import "./modules/odontologia/odontologia-mixins.scss";
 @import "./modules/ambulatoria/modules/internacion/internacion-mixins.scss";
-@import "./components/factores-de-riesgo-form/factores-de-riesgo-form-theme.scss";
+@import "./components/include-previous-data-question/include-previous-data-question-theme.scss";
 @import "./modules/ambulatoria/modules/indicacion/indicacion-mixins.scss";
 
 @mixin historia-clinica-mixins($theme) {
     @include ambulatoria-mixins($theme);
     @include odontologia-mixins($theme);
     @include internacion-mixins($theme);
-    @include app-factores-de-riesgo-form($theme);
-	@include indicacion-mixins($theme);
+    @include background-primary($theme);
+    @include indicacion-mixins($theme);
 }
