--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/components/internment-episode-summary/internment-episode-summary.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/components/internment-episode-summary/internment-episode-summary.component.html
@@ -3,10 +3,19 @@
 		<div class="flex-container">
 			<mat-icon color="primary" mat-list-icon fontSet="material-icons-outlined" [inline]="true">meeting_room
 			</mat-icon>
-			<span class="mat-body-2">{{ internmentEpisode?.roomNumber }}</span>
+			<span class="mat-body-2" *ngIf="!physicalDischargeDate else noInfo">{{internmentEpisode?.roomNumber}}</span>
 			<mat-icon color="primary" mat-list-icon [inline]="true">single_bed</mat-icon>
-			<span class="mat-body-2">{{ internmentEpisode?.bedNumber }} </span>
-			<span class="mat-body-2">{{ internmentEpisode?.sectorDescription}}</span>
+			<span class="mat-body-2" *ngIf="!physicalDischargeDate else noInfo">{{internmentEpisode?.bedNumber}}</span>
+			<span class="mat-body-2" *ngIf="!physicalDischargeDate">{{internmentEpisode?.sectorDescription}}</span>
+			<div *ngIf="physicalDischargeDate" fxLayoutAlign="start center" fxLayout.xs="column" fxLayoutGap="10px">
+				<div fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="start center">
+					<mat-icon class="green">check_circle_outline</mat-icon>
+					<span class="green">{{'internaciones.discharge.HAS_PHYSICAL_DISCHARGE' | translate}}</span>
+				</div>
+				<div>
+					<span class="date">{{physicalDischargeDate}}</span>
+				</div>
+			</div>
 		</div>
 	</mat-list-item>
 	<div fxLayout="row">
@@ -15,7 +24,7 @@
 				<span class="uppercase" [translate]="'internaciones.discharge.PHYSICAL_DISCHARGE'"></span>
 			</button>
 		</div>
-		<div *ngIf="!patientDocuments.hasEpicrisis">
+		<div *ngIf="!patientDocuments.hasEpicrisis && !physicalDischargeDate">
 			<button id="btnPaseCama" name="btnPaseCama" mat-flat-button color="primary" *appHasRole="['ADMINISTRATIVO']"
 					(click)="goToPaseCama()">
 							<span class="uppercase"
@@ -76,5 +85,7 @@
 							  [translate]="'internaciones.internacion-paciente.actions.ADMINISTRATIVE_DISCHARGE'"></span>
 		</button>
 	</ng-container>
-
 </mat-list>
+<ng-template #noInfo>
+	<span class="mat-body-2">-</span>
+</ng-template>
