tg-7080 Mueve medical-coverage a módulo de pacientes

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/dialogs/medical-coverage/medical-coverage.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/dialogs/medical-coverage/medical-coverage.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../assets/styles/mixins.scss';
+@import '../../../../../assets/styles/mixins';
 
 ::ng-deep .mat-form-field-wrapper {
 	margin: 0;
