--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/dialogs/medical-coverage/medical-coverage.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/dialogs/medical-coverage/medical-coverage.component.html
@@ -28,57 +28,11 @@
 				</mat-card>
 			</ng-template>
 		</div>
-
-		<div>
-			<strong translate="medical-coverage.NEW_HEALTH_INSURANCES"></strong>
-			<form [formGroup]="healthInsuranceForm" fxLayoutGap="5px" class="form" #formDirectiveHealthInsuranceForm="ngForm"
-				  (ngSubmit)="addHealthInsurance(formDirectiveHealthInsuranceForm)">
-				<div fxLayout="column" fxLayoutGap="10px">
-					<div fxLayout="row" fxLayoutGap="10px" fxLayout.lt-sm="column">
-						<mat-form-field appearance="outline">
-							<input type="text" placeholder="{{ 'Buscar obra social' | translate }}" aria-label="Number"
-								   formControlName="healthInsurance" matInput [matAutocomplete]="auto">
-							<mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-								<mat-option *ngFor="let healthInsurance of healthInsuranceFilteredMasterData"
-											(onSelectionChange)="selectHealthInsurance($event, healthInsurance)"
-											[value]="getFullHealthInsuranceText(healthInsurance)">
-									<span class="mat-body">{{getFullHealthInsuranceText(healthInsurance)}}</span>
-								</mat-option>
-							</mat-autocomplete>
-							<mat-error translate="forms.REQUIRED"></mat-error>
-						</mat-form-field>
-
-						<mat-form-field appearance="outline">
-							<mat-label [translate]="'medical-coverage.PLAN_LABEL'"></mat-label>
-							<mat-select
-								formControlName="plan">
-								<mat-option
-									id="healthInsurancePlan"
-									name="healthInsurancePlan"
-									*ngFor="let healthInsurancePlan of hiPlans" [value]="healthInsurancePlan.id">
-									{{healthInsurancePlan.plan}}
-								</mat-option>
-							</mat-select>
-						</mat-form-field>
-					</div>
-					<div fxLayout="column" fxLayoutGap="6px">
-						<mat-form-field appearance="outline">
-							<input id="healthInsuranceAffiliateNumber" name="healthInsuranceAffiliateNumber"
-								   formControlName="affiliateNumber" placeholder="{{'Nro de afiliado' | translate}}" matInput>
-						</mat-form-field>
-						<mat-radio-group fxLayout="row" fxLayoutGap="6px" name="health-insurance-condition"
-										 id="health-insurance-condition" formControlName="condition" fxLayoutGap="20px">
-							<mat-radio-button *ngFor="let condition of conditions"
-											  [value]="condition">
-								<span>{{condition.toLocaleLowerCase() | titlecase}}</span>
-							</mat-radio-button>
-						</mat-radio-group>
-					</div>
-						<button mat-stroked-button color="primary" class="uppercase margin" id="add-health-insurance"
-								type="submit" name="add-health-insurance"
-								translate="medical-coverage.ADD_HEALTH_INSURANCES"></button>
-				</div>
-			</form>
+		<div aling="start">
+			<button mat-button id="add-health-insurance" type="button" color="primary" class="text-button"
+					onclick="this.blur()" (click)="openAddHealthInsurance()" >
+				<span [translate]="'medical-coverage.buttons.NEW_HEALTH_INSURANCE'"></span>
+			</button>
 		</div>
 	</mat-card>
 
