tg-7023 [FE] Agregar visualizacion de ART en cobertura medica del paciente

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/medical-coverage-summary-view/medical-coverage-summary-view.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/medical-coverage-summary-view/medical-coverage-summary-view.component.html
@@ -11,7 +11,7 @@
                     class="lowercase capitalize-first-letter">
                     {{ coverageInfo.plan }} | {{ coverageInfo.condition }}
                 </span>
-                <span>
+                <span *ngIf="coverageInfo?.type!=typeART">
                     {{ 'ambulatoria.medical-coverage-summary-view.AFFILIATE_NUMBER' | translate }}
                     <ng-container *ngIf="coverageInfo?.affiliateNumber else noInfo">
                         {{ coverageInfo.affiliateNumber }}
@@ -22,6 +22,11 @@
                         </span>
                     </ng-template>
                 </span>
+				<div *ngIf="coverageInfo?.type==typeART" fxLayout="column">
+					<span translate="medical-coverage.ART"></span>
+					<span *ngIf="coverageInfo?.cuit" translate="medical-coverage.CUIT_VIEW"
+						  [translateParams]="{cuit: coverageInfo.cuit}"></span>
+				</div>
             </div>
         </div>
     </div>
