tg-7094 [FE] Agregar Farmaco en el menu de indicaciones

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-indications-card/internment-indications-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-indications-card/internment-indications-card.component.html
@@ -4,6 +4,9 @@
 		[canEdit]="['ESPECIALISTA_MEDICO', 'ESPECIALISTA_EN_ODONTOLOGIA', 'PROFESIONAL_DE_SALUD', 'ENFERMERO']"
 		[menu]="!epicrisisConfirmed" [matMenu]="menu">
 		<mat-menu #menu="matMenu">
+			<button mat-menu-item (click)="openPharmacoDialog()">
+				<span>{{'indicacion.internment-card.menu-items.PHARMACO' | translate }}</span>
+			</button>
 			<button mat-menu-item (click)="openDietDialog()">
 				<span>{{'indicacion.internment-card.menu-items.DIET' | translate }}</span>
 			</button>
